# genit

./: Makefile  README.md  genit.nu
templates/C/: .editorconfig  .gitignore.dist  Makefile  README.md  maskfile.md  nob.c
templates/C/scripts/: ctags.nu
templates/C/src/: main.c
templates/Lua/: .busted  .editorconfig  .gitignore.dist  GENIT_PKG-scm-1.rockspec  Makefile
templates/Lua-nvim/: .editorconfig  .gitignore.dist  .gitmodules  GENIT_PKG-scm-1.rockspec  Makefile  README.md
templates/Lua-nvim/lua/: GENIT_NVIM.lua
templates/Lua-nvim/plugin/: GENIT_NVIM.lua
templates/Lua-nvim/scripts/: doc.lua
templates/Lua/scripts/: manpage_lua_vars.lua
templates/Rust/: .editorconfig  .gitignore.dist  Cargo.toml  Justfile  Makefile  README.md  maskfile.md  rust-toolchain.toml  rustfmt.toml
templates/Zig/: .editorconfig  build.zig
templates/Zig.0.13.0/: build.zig  build.zig.zon  maskfile.md
templates/Zig.0.13.0/src/: main.zig  root.zig
templates/Zig.0.15.2/: Justfile  README.md  build.zig  maskfile.md
templates/Zig.0.15.2-Wasm4/: .editorconfig  GENIT_PKG.md  Justfile  README.md  build.zig  docs  maskfile.md
templates/Zig.0.15.2-Wasm4/src/: main.zig  wasm4.zig
templates/Zig.0.15.2/src/: main.zig
