[package]
name = "GENIT_PKG"
version = "0.1.0"
edition = "2024"
description = "GENIT_DESC"
repository = "https://github.com/yilisharcs/GENIT_REPO"
license = "GPL-3.0-or-later"
# keywords = []
# categories = []
# include = []

[dependencies]
thiserror = "2.0.17"

[profile]
[profile.dev]
debug = false
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"

[profile.release-tiny]
inherits = "release"
opt-level = "s"
strip = true
panic = "abort"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
