[package]
name = "GENIT_PKG"
version = "0.1.0"
edition = "2024"
description = "GENIT_DESC"
repository = "https://github.com/yilisharcs/GENIT_REPO"
license = "GPL-3.0-or-later"
# keywords = []
# categories = []
# include = []

[dependencies]
thiserror = "2.0.17"

[profile]
[profile.tiny]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = "s"
panic = "abort"
strip = true

[lints.clippy]
# Performance
needless_pass_by_value = "warn"
redundant_clone = "deny"

# Safety
cast_possible_truncation = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
expect_used = "warn"
unwrap_used = "deny"

# Style
manual_let_else = "warn"
match_wildcard_for_single_variants = "warn"
wildcard_imports = "warn"

# Suspicious
mut_mut = "warn"
shadow_unrelated = "deny"
